client/src/index.css
input {
  border-radius: 5px;
}
button {
  cursor: pointer;
  border-radius: 13px;
}


.button2 {
  cursor: pointer;
  background-color: Transparent;
  border: none;

}

*
{font-family: cursive;
}
.on {
  color: #000;
  background-color: Transparent;
  border: none;
}

.off {
  color: #ccc;
  background-color: Transparent;
  border: none;
}

.nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: navy;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  font-size: calc(10px + 2vmin);
  z-index: 2;
  height: 48px;

}

.center{
  margin-top: 50%;
  justify-content: center;
  margin-right: 50%;
  width: 100%;
  height: 80%;

}


.signup {
  margin-top: 230%;

}


.login {
  margin-top: 100%;

}

.header {
  margin-left: -42%;

}

.header2 {
  margin-left: -17%;

}

.below-nav {
  margin-top: 6%;
  justify-content: center;
  display: grid;
  align-content: center;

}

.below-nav2 {
  margin-top: 50%;
  justify-content: center;
  margin-right: 50%;
  width: 100%;
  height: 80%;

}





.feedSize {
  width: 60px;
  height: 60px;
  border-radius: 100%;
}

.submit-forms {

  justify-content: center;
  display: grid;
}




.post-container {
  background-color: white;
  border-radius: 1em;
  display: grid;
  justify-content: center;

}

.post-container-plus {
  background-color: white;
  border-radius: 1em;
  display: grid;
  justify-content: center;
  gap: 13px;
}


.post-size {
  min-width: 40%;
  height: 78px;
}

.inline{
  background-color: white;
  display: grid;
  justify-content: center;


}


.post-size2 {
  margin-left: 12%;
}


.user-feed-container {
  text-align: center;
  width: 100%;
  gap: 5px;
  margin-top: 65px;
  justify-content: center;
}

.user-feed-image {
  height: 200px;
  width: 200px;
  border-radius: 100%;
}

.welcome {
  margin-left: 610px;
}

.size{
  height: 550px;
  width: 550px;
  margin-left: 30%;
  border-radius: 100%;
}

